--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "Med Genie" "\0"
-            VALUE "FileDescription", "A new Flutter project." "\0"
+            VALUE "CompanyName", "Arobisca Control Panel" "\0"
+            VALUE "FileDescription", "Arobisca Control Panel" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "flutter_admin_portal" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2021 FAP. All rights reserved." "\0"
-            VALUE "OriginalFilename", "fdp.exe" "\0"
-            VALUE "ProductName", "flutter_admin_portal" "\0"
+            VALUE "InternalName", "Arobisca Control Panel" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2021 AROBISCA. All rights reserved." "\0"
+            VALUE "OriginalFilename", "ArobiscaCP.exe" "\0"
+            VALUE "ProductName", "Arobisca Control Panel" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
